[package]
name = "jscythe"
version = "1.0.0"
edition = "2021"
description = "Force any node.js/electron/v8 based process to execute arbitrary javascript code."
authors = ["Simone Margaritelli <evilsocket@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/evilsocket/sauron"

[dependencies]
clap = { version = "3.2.18", features = ["derive"] }
lazy_static = "1.4.0"
netstat2 = "0.9.1"
nix = "0.25.0"
reqwest = { version = "0.11.11", features = ["blocking"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
sysinfo = "0.25.3"
websocket = "0.26.5"
